--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,7 +91,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.login"
@@ -133,7 +133,14 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-firebase')
+    compile(project(':react-native-firebase')) {
+        transitive = false
+    }
+    // Firebase dependencies
+    compile "com.google.android.gms:play-services-base:11.4.2"
+    compile "com.google.firebase:firebase-core:11.4.2"
+    compile "com.google.firebase:firebase-auth:11.4.2"
+
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
